version 0.9.2, 04/10/2003
	1. add routines returning ionization thresholds in CRM.
	
version 0.9.1, 03/27/2003
	1. correct manual on GetPotential.
	2. correct an error in Uehling potential.
	3. add the ionization cross sections from aladdin database.
	
Version 0.9.0, 03/17/2003
	1. RadialRyd match point needs to be further reduced for Intel
	   machines. the match point is now z*r=10^2.
	2. number of points in half wavelength for high n states reduced 
	   to 14 from the original 16. this is dense enough and allow a
	   slightly larger coverage of the radial grid.
	3. add the function Y5N (i.e., the Wittaker function) to pfac.

Version 0.8.9, 03/11/2003
	1. in RadialRyd, the matching point has to be reduced to avoid the
	   round off errors in COULCC.
	2. improve the match of RR cross section at highest grid energy.
	3. update the FAQ on the use of OptimizeRadial, and the demo
	   scripts accordingly.
	4. avoid overflow in RRRate1E.
	5. fix a bug in RRRate1E and PIRate1E for high energy cross
	   sections.
	6. add TotalPICross and TotalCICross functions.
	7. the scaling factor in BED CI cross sections is modified.
	
Version 0.8.8, 03/04/2003
	1. add my new RR and DR rates to CRM.
	2. improve FracAbund for very low temperatures.
	3. use GNU autoconf to generate configure script,
	   the build process now uses configure.
	4. some improvement in angular integration.

Version 0.8.7, 01/06/2003
	1. replace mpfun with my own implementation.
	2. add the prompt ">>> " to the interactive sfac interface.
	3. add extrapolate for long range free-free radial integral.
	4. determine the rmax from the number of mesh points.
	5. use cfortran.h for c-fortran interfacing.
	
Version 0.8.6, 12/04/2002
	1. implement DRBranch and DRStrength.
	2. radial solver for Rydberg states has been improved.
	3. implement TotalRRCross function.
	4. Change the default AngZCut and MixCut to smaller values.
	5. made the transition of RR and PI from low to high energy more
	   smooth. 