@@ -1,5 +1,8 @@
 version 0.9.2, 04/10/2003
 	1. add routines returning ionization thresholds in CRM.
+	2. correct a bug that causes incorrect M1 transition rates
+	   sometimes. It usualy occurs when the upper and lower levels are
+	   affected by configuration interaction significantly.
 	
 version 0.9.1, 03/27/2003
 	1. correct manual on GetPotential.
